# astrolabe

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  Package.swift  README.md  deploy.sh  docker-compose.yml  entrypoint.py  pyproject.toml  test_universe.py
Sources/XingTu/: XingTu.swift
Sources/XingTu/Core/: AIService.swift  CSVParser.swift
Sources/XingTu/Decision/: AIDecision.swift  DecisionManager.swift  ReviewQueue.swift
Sources/XingTu/EventDriven/: Event.swift  EventBus.swift  TriggerRule.swift  XingJiScheduler.swift
Sources/XingTu/Models/: MetaEvent.swift  (+4 more)
Sources/XingTuApp/: XingTuApp.swift
Sources/XingTuCLI/: main.swift
Tests/: test_api.py  test_data.csv  test_events.py  test_ingest.py  test_mcp.py  test_metric_calculator.py  test_metric_service.py  test_metric_store.py  test_observability.py  test_observability_routes.py  test_search.py  test_store.py
cells/: csv_parse_cell.yaml  meta_confirm_cell.yaml  meta_infer_cell.yaml  query_execute_cell.yaml
docs/: API.md  BOX_MODEL_DISCUSSION.md  CELLS.md  CELLS_V2.md  DESIGN.md  DESIGN_CONTRACT.md  DESIGN_V2.md  DOCKER_DEPLOYMENT.md  MCP_SERVER.md  POSITIONING.md  PRODUCTIZATION.md  SCHEMA.md  SCHEMA_V2.md  XINGXUN-SPEC.md  XINGXUN-SYMBOLIC.md
docs/api/: reembed_endpoint.md
docs/matrix-map/: .gitignore  Makefile  README.md  config.local.yaml.example  config.yaml  schema.yaml
docs/metrics/: EVENT_SCHEMA.md
docs/xingtu-map/: README.md
mcp-server/: README.md  pyproject.toml
scripts/: import_matrix_map.py  import_xingtu_map.py  migrate_from_xingtu.py
src/xingtu/: __init__.py  config.py  delta.py  embeddings.py  events.py  ingest.py  intent.py  matrix_map.py  metrics.py  models.py  observability.py  scheduler.py  search.py  store.py  universe.py
src/xingtu_api/: __init__.py  deps.py  main.py
src/xingtu_cli/: __init__.py  main.py
src/xingtu_mcp/: __init__.py  http_server.py  server.py
xingji/: cross_data_query_v0.yaml  data_import_v0.yaml
(+71 files in other folders)
