[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xingtu"
version = "2.0.0"
description = "星图 XingTu - 多模态 Agent 数据库 (Multimodal Agent Database)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Trine", email = "trine@fengyin.os" },
]
keywords = ["agent", "database", "multimodal", "vector", "lancedb", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "lancedb>=0.17",
    "pydantic>=2.0",
    "pyarrow>=16",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
embeddings-openai = ["openai>=1.6"]
embeddings-ollama = ["ollama>=0.3"]
embeddings-local = ["sentence-transformers"]
embeddings-multimodal = ["open-clip-torch", "pillow"]
api = ["fastapi>=0.111", "uvicorn>=0.29"]
cli = ["click>=8.0", "rich>=13.0"]
pdf = ["pymupdf>=1.24"]
excel = ["openpyxl>=3.1"]
database = ["sqlalchemy>=2.0"]
all = [
    "xingtu[mcp,embeddings-openai,embeddings-ollama,cli,pdf,excel,database,api]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
xingtu = "xingtu_cli.main:cli"
xingtu-mcp-http = "xingtu_mcp.http_server:main"

[project.entry-points."mcp.servers"]
xingtu = "xingtu_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xingtu", "src/xingtu_mcp", "src/xingtu_cli", "src/xingtu_api"]

[tool.pytest.ini_options]
testpaths = ["Tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
